--- a/src/app/shared/header/header.component.desktop.css
+++ b/src/app/shared/header/header.component.desktop.css
@@ -61,6 +61,13 @@
 
 }
 
+@media screen and (min-width: 768px) and (max-width: 950px) {
+  header{
+    grid-template-columns: 1fr 3fr;
+  }
+}
+
+
 @media screen and (min-width: 1440px){
   :host{
     width: 1440px;
